--- a/css/contact.css
+++ b/css/contact.css
@@ -15,7 +15,7 @@ body {
 }
 
 #contact-page {
-    background-image: url(/../source/void.webp);
+    background-image: url(../source/void.webp);
     justify-content: center;
 
 }
