--- a/css/tour.css
+++ b/css/tour.css
@@ -29,7 +29,7 @@ body {
 
 #tour-dates {
     min-height: 100vh;
-    background-image: url(/../source/void.webp);
+    background-image: url(../source/void.webp);
 
 }
 
